--- a/india website.html
+++ b/india website.html
@@ -379,7 +379,7 @@
             </li>
 
             <img
-              src="Image/G20-Countries.jpg"
+              src="G20-Countries.jpg"
               style="width: 260px; margin-left: 750px; margin-top: -200px"
               alt=""
             />
@@ -444,11 +444,11 @@
           </div>
           <br /><br />
           <div id="icon">
-            <img src="Image/1.png" width="1000px" class="img1" />
-            <img src="Image/2.png" class="img1" />
-            <img src="Image/3.png" class="img1" />
-            <img src="Image/4.png" class="img1" />
-            <img src="Image/5.png" class="img1" />
+            <img src="1.png" width="1000px" class="img1" />
+            <img src="2.png" class="img1" />
+            <img src="3.png" class="img1" />
+            <img src="4.png" class="img1" />
+            <img src="5.png" class="img1" />
             <br /><br />
             <div class="text">
               <span style="color: black; margin-left: 125px; font-weight: bold"
